Movi la ruta suelta /api/users/premium/:uid a un router especifico para usuarios en /api/users/. Modifique el modelo de User para que cuente con una nueva propiedad documents. Cree un endpoint en el router de usuarios /api/users/:uid/documents con el metodo POST para subir archivos. Modifique el endpoint /api/users/premium/:uid para que solo actualice al usuario a premium si ha cargado los documentos requeridos.
